--- a/ToadsworthBot/toadsworthbot.cfg
+++ b/ToadsworthBot/toadsworthbot.cfg
@@ -1,5 +1,4 @@
 djlist;musicmasters.dj
-djlist2;empty.dj
 metalmorlord;Postet das Metal-Morlord-GIF;https://toadsworthlp.github.io/Files/metalmorlord.gif
 pinguin;Tut so, als wäre ein Pinguin in der Nähe.;Welcher Pinguin? Wo ist ein Pinguin?
 bananenmeme;Postet das offizielle Meme des Imperiums.;https://toadsworthlp.github.io/Files/bananenmeme.jpg
@@ -9,4 +8,4 @@ random;Der einzig wahre...;Toad!
 imperator;Schreibt den vollen Namen unseres Imperators.;Imperator Caesar Divi filius Augustus, Pontifex Maximus, Consul ∞, Imperator ∞, Tribuniciae potestatis ∞, Pater patriae, Magister Pokémonis
 gibmireinenkeks;Gibt dir einen Keks.;Hier hast du einen Keks, %u: https://toadsworthlp.github.io/Files/Keks.jpg
 würfel;Gibt eine Zufallszahl zwischen 1 und dem angegebenen Maximum aus.;wuerfel.js
-sprichwort;Postet ein zufälliges Sprichwort.;sprichwort.js;
+sprichwort;Postet ein zufälliges Sprichwort.;sprichwort.js
