--- a/ToadsworthBot/toadsworthbot.cfg
+++ b/ToadsworthBot/toadsworthbot.cfg
@@ -1,4 +1,5 @@
 djlist;musicmasters.dj
+djlist2;emptyy.dj
 metalmorlord;Postet das Metal-Morlord-GIF;https://toadsworthlp.github.io/Files/metalmorlord.gif
 pinguin;Tut so, als wäre ein Pinguin in der Nähe.;Welcher Pinguin? Wo ist ein Pinguin?
 bananenmeme;Postet das offizielle Meme des Imperiums.;https://toadsworthlp.github.io/Files/bananenmeme.jpg
