--- a/ToadsworthBot/toadsworthbot.cfg
+++ b/ToadsworthBot/toadsworthbot.cfg
@@ -10,3 +10,4 @@ imperator;Schreibt den vollen Namen unseres Imperators.;Imperator Caesar Divi fi
 gibmireinenkeks;Gibt dir einen Keks.;Hier hast du einen Keks, %u: https://toadsworthlp.github.io/Files/Keks.jpg
 würfel;Gibt eine Zufallszahl zwischen 1 und dem angegebenen Maximum aus.;wuerfel.js
 sprichwort;Postet ein zufälliges Sprichwort.;sprichwort.js
+restart;Erstellt eine neue Instanz des Bots.;restart.js
