--- a/ToadsworthBot/toadsworthbot.cfg
+++ b/ToadsworthBot/toadsworthbot.cfg
@@ -11,3 +11,4 @@ gibmireinenkeks;Gibt dir einen Keks.;Hier hast du einen Keks, %u: https://toadsw
 würfel;Gibt eine Zufallszahl zwischen 1 und dem angegebenen Maximum aus.;wuerfel.js
 sprichwort;Postet ein zufälliges Sprichwort.;sprichwort.js
 restart;Erstellt eine neue Instanz des Bots.;restart.js
+test;Tut... Dinge.;haxlol.js
